--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.0.0",
     "mongoose": "^5.11.9",
     "passport-jwt": "^4.0.0",
+    "ramda": "^0.27.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
@@ -43,6 +44,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/bcrypt": "^3.0.0",
+    "@types/ramda": "^0.27.34",
     "@types/validator": "^13.1.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
