--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/passport-local": "^1.0.33",
     "bcrypt": "^5.0.0",
     "mongoose": "^5.11.9",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "ramda": "^0.27.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -40,13 +44,14 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
-    "@types/bcrypt": "^3.0.0",
+    "@types/passport-jwt": "^3.0.3",
     "@types/ramda": "^0.27.34",
-    "@types/validator": "^13.1.2",
     "@types/supertest": "^2.0.10",
+    "@types/validator": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
