--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@nestjs/mongoose": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
-    "@types/passport-local": "^1.0.33",
+    "@nestjs/platform-socket.io": "^7.6.5",
+    "@nestjs/websockets": "^7.6.5",
     "bcrypt": "^5.0.0",
     "mongoose": "^5.11.9",
     "passport": "^0.4.1",
@@ -41,6 +42,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@types/passport-local": "^1.0.33",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
@@ -50,6 +52,7 @@
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^3.0.3",
     "@types/ramda": "^0.27.34",
+    "@types/socket.io": "^2.1.12",
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
