--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
     ports:
       - 27018:27017
     volumes:
-      - ./mongo-data-4.4:/data/db
+      - ${pwd}/mongo-data-4.4:/data/db
     command: --wiredTigerCacheSizeGB 1.5
