добавлены multer и cloudinary

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=465
 MAIL_USER=chattomeconnect@yandex.ru
 MAIL_PASSWORD=vtomnrhprffhgxkq
+
+
+CLOUD_NAME=
+CLOUD_API_KEY=
+CLOUD_API_SECRET_KEY=
