--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-socket.io": "^7.6.5",
     "@nestjs/websockets": "^7.6.5",
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.26.0",
     "mongoose": "^5.11.9",
     "nodemailer": "^6.4.18",
     "passport": "^0.4.1",
@@ -44,15 +45,16 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
-    "@types/passport-local": "^1.0.33",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/multer": "^1.4.6",
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/ramda": "^0.27.34",
     "@types/socket.io": "^2.1.12",
     "@types/supertest": "^2.0.10",
